operator/pkg/gateway-api/testdata/gateway/listenerset-reference-grant/output/gateway-listenerset-refgrant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: gateway-listenerset-refgrant
  namespace: gateway-conformance-infra
  resourceVersion: "1000"
spec:
  allowedListeners:
    namespaces:
      from: All
  gatewayClassName: cilium
  listeners:
  - allowedRoutes:
      namespaces:
        from: All
    name: http
    port: 80
    protocol: HTTP
status:
  attachedListenerSets: 1
  conditions:
  - lastTransitionTime: "2026-07-08T13:43:38Z"
    message: Gateway successfully scheduled
    reason: Accepted
    status: "True"
    type: Accepted
  - lastTransitionTime: "2026-07-08T13:43:38Z"
    message: Gateway waiting for address
    reason: AddressNotAssigned
    status: "False"
    type: Programmed
  listeners:
  - attachedRoutes: 0
    conditions:
    - lastTransitionTime: "2026-07-08T13:43:38Z"
      message: Resolved Refs
      reason: ResolvedRefs
      status: "True"
      type: ResolvedRefs
    - lastTransitionTime: "2026-07-08T13:43:38Z"
      message: Listener Accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2026-07-08T13:43:38Z"
      message: Address not ready yet
      reason: Pending
      status: "False"
      type: Programmed
    name: http
    supportedKinds:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
    - group: gateway.networking.k8s.io
      kind: GRPCRoute
