operator/pkg/gateway-api/testdata/gateway/listenerset-reference-grant/output/listenerset-listenerset-with-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: listenerset-with-reference-grant
  namespace: gateway-conformance-infra
  resourceVersion: "999"
spec:
  parentRef:
    name: gateway-with-listener-sets-test-reference-grant
    namespace: gateway-conformance-infra
  listeners:
    - name: ls-https-with-grant
      port: 8443
      protocol: HTTPS
      hostname: ls-with-grant.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is accepted
      reason: Accepted
      status: "True"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: ListenerSet is programmed
      reason: Programmed
      status: "True"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Resolved Refs
          reason: ResolvedRefs
          status: "True"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Accepted
          reason: Accepted
          status: "True"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener Programmed
          reason: Programmed
          status: "True"
          type: Programmed
      name: ls-https-with-grant
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
