operator/pkg/gateway-api/testdata/gateway/listenerset-reference-grant/output/listenerset-listenerset-without-reference-grant.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: ListenerSet
metadata:
  creationTimestamp: null
  name: listenerset-without-reference-grant
  namespace: gateway-api-listener-sets-test-reference-grant-ns
  resourceVersion: "999"
spec:
  parentRef:
    name: gateway-with-listener-sets-test-reference-grant
    namespace: gateway-conformance-infra
  listeners:
    - name: ls-https-without-grant
      port: 9443
      protocol: HTTPS
      hostname: ls-without-grant.com
      allowedRoutes:
        namespaces:
          from: All
      tls:
        certificateRefs:
          - group: ""
            kind: Secret
            name: certificate
            namespace: gateway-conformance-web-backend
status:
  conditions:
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Accepted
    - lastTransitionTime: "2025-07-01T00:00:00Z"
      message: No valid listeners
      reason: ListenersNotValid
      status: "False"
      type: Programmed
  listeners:
    - attachedRoutes: 0
      conditions:
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: CertificateRef is not permitted
          reason: RefNotPermitted
          status: "False"
          type: ResolvedRefs
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener not valid. Invalid CertificateRef, not permitted.
          reason: Invalid
          status: "False"
          type: Accepted
        - lastTransitionTime: "2025-07-01T00:00:00Z"
          message: Listener not valid
          reason: Invalid
          status: "False"
          type: Programmed
      name: ls-https-without-grant
      supportedKinds:
        - group: gateway.networking.k8s.io
          kind: HTTPRoute
        - group: gateway.networking.k8s.io
          kind: GRPCRoute
